parte da utilização da busca em largura
